fix:tests: update controller to use CheckoutService and added tests for endpoint
CheckoutController now uses the getCheckoutPrice method from CheckoutService to get the total price.

Also added some tests to check that the endpoint behaves correctly.